# urf-open-review-ledger

./: .gitignore  .zenodo.json  ATTEST_TU_STACK_v1.txt  CHECKSUMS.txt  CITATION.cff  CLOSED_ITEMS.md  DOCS_TU_STACK_FREEZE_v1.txt  Dockerfile  FINAL_WALL.md  FREEZE.md  GOVERNANCE.md  HOW_TO_REVIEW.md  MANUSCRIPT_ACCEPTABILITY.md  Main.lean  PROCESS_HARDENING_CLOSURE.md  PROOF_INFRASTRUCTURE.md  PROVENANCE.json  README.md  RELEASE.md  SCOPE_LIMITATIONS_STATUS.md  STATUS.md  URF-AUDIT.md  URFCore.lean  URF_AKR.lean  URF_BSD.lean  URF_CLR.lean  URF_Core.lean  URF_Hodge.lean  UrfCore.lean  index.md  lake-manifest.json  lakefile.lean  lakefile.toml  main.tex  trw-erb-sigc.tex  urf-sg-schema.json  urf-sg-torus-chords-eigenspaces.md
legacy/urf-core-community/: .gitignore  ATTESTATION_SUBJECT.json  CHANGELOG.md  CLAIMS.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile.ci  FINAL_WALL.md  FORWARD.md  FREEZE.md  Makefile  PROVENANCE.json  PROVENANCE_TU_STACK_v1.txt  QUICKSTART.md  README.md  REFEREE.md  RELEASE.md  RELEASE_TU_STACK_v1.md  SLSA_PREDICATE.json  URF-AUDIT.md  URF-Axioms-Core.aux  URFCore.lean  chronos_cert_verify.py  index.md  lakefile.lean  lean-toolchain  pyproject.toml  urf-sg-Cn-analysis.md  urf-sg-Cn-theorem.md  urf-sg-admissible-V.md  urf-sg-representation.md  urf-sg-torus-chords-symmetry.md  urf-sg-torus-chords.md  urf-sg-wall.md  urf_law3.lean  urf_regression_ae.json
legacy/urf-core-community/.devcontainer/: devcontainer.json  postCreate.sh
legacy/urf-core-community/.githooks/: pre-commit
legacy/urf-core-community/scripts/: urf  (+4 more)
urf-cli/: pyproject.toml
(+532 files in other folders)
