[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "urf-core"
version = "0.1.0"
description = "Unified Rigidity Framework (URF) core: invariants, axioms, and deterministic verifiers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Inacio F. Vasquez" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/urf_core"]

[tool.hatch.build.targets.sdist]
include = [
  "src/urf_core",
  "README.md",
  "LICENSE",
  "pyproject.toml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

